--- a/index.html
+++ b/index.html
@@ -203,7 +203,15 @@
                         </tr>
                         <tr>
                             <th><label for="hp">연락처</label></th>
-                            <td><input type="text" id="hp"></td>
+                            <td>
+                                <select name="hp" id="hp">
+                                    <option value="010">010</option>
+                                    <option value="011">011</option>
+                                </select>
+                                 - <input type="text" name="hp1" id="hp1">
+                                 - <input type="text" name="hp2" id="hp2">
+
+                            </td>
                         </tr>
                         <tr>
                             <th><label for="email">이메일</label></th>
